[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Control_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu_items/Resume.png" type="Texture" id=2]
[ext_resource path="res://assets/menu_items/Resume_focused.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_items/exit_focused.png" type="Texture" id=4]
[ext_resource path="res://assets/menu_items/exit.png" type="Texture" id=5]

[node name="Control_menu" type="CanvasLayer"]
pause_mode = 2

[node name="Control" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -34.0
margin_right = 64.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_right = 128.0
margin_bottom = 68.0

[node name="TBtn_resume" type="TextureButton" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="TBtn_exit" type="TextureButton" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 128.0
margin_bottom = 68.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 4 )
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/TBtn_resume" to="Control" method="_on_TBtn_resume_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/TBtn_exit" to="Control" method="_on_TBtn_exit_pressed"]
